--- a/style.css
+++ b/style.css
@@ -93,12 +93,7 @@ button {
 }
 
 /* Anchor Span */
-.anchor {
-    display: block;
-    height: 50px;
-    margin-top: -50px;
-    visibility:hidden;
-}
+
 
 /* About */
 
@@ -107,6 +102,7 @@ button {
     align-items: center;
     justify-content: center;
     padding: 5%;
+    overflow: hidden;
 }
 
 #abt-card {
@@ -137,30 +133,30 @@ h5 {
 }
 
 /* Experience */
-#exp {
-    padding-left: 10% !important;  
-    padding-right: 10% !important;
-    margin-bottom: 5% !important;
-}
 
 .exp-title {
     font-size:1.5em !important;
     text-align: left !important;
 }
 
-.exp-proj-title {
-    font-size: 4em;
-    color: #E7AAFF;
-    font-weight: bold;
-    margin-bottom: 2% !important;
+#exp-timeline {
+    padding-left:5%;
 }
 
-#ennovar-exp {
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: center;
-    padding: 0 10% 0 10%;
+#exp-line {
+    background-color: white;
+    width: 3px;
+    height:300px;
+    text-align: center;
+    
+}
+
+.experience-title {
+    margin-bottom: 4%;
+    font-size: 3em;
+    color: white;
+    font-weight: bold;
+    text-align: left;
 }
 
 h2 {
@@ -168,21 +164,14 @@ h2 {
     text-align: left !important;
     font-size: 1.2em !important;
     text-align: center !important;
-    margin: 0 !important;
-    padding: 0 !important;
+    margin-left:-2em;
 }
 
 .exp-date {
     font-style: italic;
     font-size: 1.2em;
-}
-
-ul li {
-    font-size: 1.1em !important;
-}
-
-.position-title {
-    font-weight: bold;
+    color:#D9D0D0;
+    margin-left: -1em;
 }
 
 /* Projects */
