--- a/style.css
+++ b/style.css
@@ -92,9 +92,6 @@ button {
     font-weight: bold;
 }
 
-/* Anchor Span */
-
-
 /* About */
 
 #abt {
@@ -103,6 +100,7 @@ button {
     justify-content: center;
     padding: 5%;
     overflow: hidden;
+    margin-bottom:5%;
 }
 
 #abt-card {
@@ -133,6 +131,9 @@ h5 {
 }
 
 /* Experience */
+#exp {
+    margin-bottom:5%;
+}
 
 .exp-title {
     font-size:1.5em !important;
@@ -151,12 +152,12 @@ h5 {
     
 }
 
-.experience-title {
+.section-title {
     margin-bottom: 4%;
     font-size: 3em;
     color: white;
     font-weight: bold;
-    text-align: left;
+    text-align: center;
 }
 
 h2 {
@@ -165,13 +166,14 @@ h2 {
     font-size: 1.2em !important;
     text-align: center !important;
     margin-left:-2em;
+    margin-bottom: 0 !important;
 }
 
 .exp-date {
     font-style: italic;
     font-size: 1.2em;
     color:#D9D0D0;
-    margin-left: -1em;
+    margin-left: -1em !important;
 }
 
 /* Projects */
