Redesigned project cards, redid links

--- a/style.css
+++ b/style.css
@@ -185,7 +185,6 @@ h2 {
 /* Projects */
 #projects {
    margin-top: 5%;
-   padding-top: 2%;
 }
 
 #proj-desc{
@@ -194,6 +193,10 @@ h2 {
 
 #proj-intro {
     margin-bottom: 3%;
+}
+
+#project-categories {
+    padding: 0 5% 0 5%;
 }
 
 .proj-cat {
@@ -212,52 +215,32 @@ h4 {
 
 }
 
-#da {
-    background: #af4b4b;
-}
-
-#tw {
-    background-color: rgb(45, 114, 45);
-    text-align: right;
-}
-
-#webd {
-    background-color: rgb(67, 134, 161);
-}
-
 .proj {
     background-color: white;
     color: black;
+    width: 30%;
     height:auto;
-    margin-top: 2%;
+    display:inline-block;
+    margin: 3% 1%;
+    box-shadow: 3px 3px 10px #000;
 }
 
 .all-projects {
     display: none;
-}
-
-.proj::before {
-    background-color: #000;
-    opacity:0.5;
+    text-align: center;
 }
 
 .proj-pic {
+    height: 150px;
     width: 100%;
     object-fit: cover;
 }
 
-.proj-pic-main {
-    width: auto;
-
-}
-
 .proj-text-main {
-    padding: 2%;
+    padding: 4%;
     display: flex;
     flex-direction: column;
     text-align: center;
-    align-items: center;
-    justify-content: center;
 }
 
 .proj-title {
@@ -269,7 +252,7 @@ h4 {
 .view-btn {
     background-color: #672482;
     color: white;
-    padding: 1%;
+    padding: 2%;
     text-decoration: none;
     font-weight: bold;
     text-align: center;
@@ -288,7 +271,7 @@ h4 {
 }
 
 #resm-btn {
-    background-color: #a060b9;
+    background-color: #a25fbc;
     color:white;
     text-decoration: none;
     border-radius: 0% !important;
@@ -470,12 +453,6 @@ h1 {
         font-size: 1em !important;
     }
 
-    .all-projects {
-        display: grid;
-        grid-template-columns: 85%;
-        grid-gap: 1rem;
-    }
-
     .proj-title {
         text-align: center;
         font-size: 1em !important;
@@ -570,12 +547,6 @@ h1 {
         padding: 1% 5% 0 5%;
     }
 
-    .all-projects {
-        display: grid;
-        grid-template-columns: 85%;
-        grid-gap: 1rem;
-    }
-
     .proj-title {
         text-align: center;
         font-size: 1em !important;
@@ -646,12 +617,6 @@ h1 {
         padding: 1% 5% 0 5%;
     }
 
-    .all-projects {
-        display: grid;
-        grid-template-columns: 40% 40%;
-        grid-gap: 1rem;
-    }
-
     .proj-title {
         text-align: center;
         font-size: 1em !important;
@@ -679,9 +644,6 @@ h1 {
         font-size: 5em;
     }
 
-    .all-projects {
-        display: grid;
-    }
 
     .proj-title {
         text-align: center;
