--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ h4 {
     width: 30%;
     height:auto;
     display:inline-block;
-    margin: 3% 1%;
+    margin: 2%;
     box-shadow: 3px 3px 10px #000;
 }
 
