--- a/style.css
+++ b/style.css
@@ -132,7 +132,6 @@ h3 {
 }
 
 .section-title {
-    font-size: 3em;
     color: white;
     font-weight: bold;
     text-align: center;
@@ -153,12 +152,12 @@ h2 {
    margin-top: 5%;
 }
 
-#proj-desc{
-    text-align: center;
+#proj-intro {
+    padding:5%;
 }
 
-#proj-intro {
-    margin-bottom: 3%;
+#proj-desc{
+    text-align: center;
 }
 
 #project-categories {
@@ -184,17 +183,18 @@ h4 {
 .proj {
     background-color: white;
     color: black;
-    width: 30%;
+    width: auto;
     height:auto;
-    display:inline-block;
-    margin: 2%;
     box-shadow: 3px 3px 10px #000;
     overflow:hidden;
+    margin-bottom: 10%;
+
 }
 
 .all-projects {
     display: none;
     text-align: center;
+    padding: 10% 5% 5% 5%;
 }
 
 .proj-pic {
@@ -242,12 +242,10 @@ h4 {
     color:white;
     text-decoration: none;
     border-radius: 0% !important;
-    padding: 1% 2% 1% 2%;
-    font-size: 1.2em;
     font-weight: bold;
     font-family: 'Segoe UI', 'Arial', sans-serif;
     border:none;
-    margin-top: 2% !important;
+    margin-top:5%;
 }
 
 #resm-btn:hover {
@@ -333,6 +331,31 @@ h4 {
 
     .fa {
         font-size:2rem !important;
+    }
+
+    .section-title {
+        font-size: 2.5rem !important;
+    }
+
+    .proj-cat > h4 {
+        font-size: 1.75rem !important;
+    }
+
+    #resm > h3 {
+        font-size: 1.75rem !important;
+    }
+
+    #resm > p {
+        font-size: 1rem !important;
+    }
+
+    #resm-btn {
+        padding: 2% 5%;
+        font-size: 1.25rem !important;
+    }
+
+    #resm > h5 {
+        font-size: 1rem !important;
     }
 }
 
