--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .nav-link {
-    font-size: 1.3em;
+    font-size: 1.4rem;
     font-weight: bold;
     text-align: center;
     color: #e1dede !important;
@@ -116,6 +116,12 @@ button {
     overflow:hidden;
 }
 
+#abt-text {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 #abt-text > p {
     font-size: 1em !important;
 }
@@ -128,7 +134,6 @@ button {
 h3 {
     font-weight:bold !important;
     font-family: 'Segoe UI','Arial', sans-serif;
-    font-size: 2.5em !important;
 }
 
 .section-title {
@@ -140,7 +145,6 @@ h3 {
 h2 {
     font-weight: bold !important;
     text-align: left !important;
-    font-size: 1.2em !important;
     text-align: center !important;
     margin-left:-2em;
     margin-bottom: 0 !important;
@@ -174,10 +178,8 @@ h2 {
 }
 
 h4 {
-    font-size:3em !important;
     font-weight:bold !important;
     color:#f3f3f3 !important;
-
 }
 
 .proj {
@@ -354,21 +356,21 @@ h4 {
     }
 
     #resm > h5 {
-        font-size: 1rem !important;
+        font-size: 1.25rem !important;
     }
 }
 
-@media screen and (min-width:535px) and (max-width:760px) {
+@media screen and (min-width:535px) and (max-width:765px) {
     #hero-header {
         font-size: 3rem !important;
     }
 
     #hero-text {
-        font-size: 1.75rem !important;
+        font-size: 1.5rem !important;
     }
 
     #about {
-        padding: 10% 4%;
+        padding: 10% 6%;
     }
 
     #abt-card {
@@ -385,16 +387,12 @@ h4 {
     }
 
     #abt-text > p {
-        font-size: 1.5rem !important;
+        font-size: 1.25rem !important;
     }
 
     #abt-text > h3 {
         text-align: center;
-        font-size: 3rem !important;
-    }
-
-    #proj-intro > h5 {
-        font-size: 1.5rem !important;
+        font-size: 2.5rem !important;
     }
 
     .section-title {
@@ -402,27 +400,23 @@ h4 {
     }
 
     .proj-text-main > .proj-title {
-        font-size: 1.75rem !important;
+        font-size: 1.5rem !important;
     }
 
     .proj-text-main > p {
-        font-size: 1.5rem !important;
+        font-size: 1.25rem !important;
     }
-
+    
     .proj-cat > h4 {
-        font-size: 2.25rem !important;
+        font-size: 2rem !important;
     }
 
     .proj-cat > h5 {
-        font-size: 1.75rem !important;
-    }
-
-    .proj-pic {
-        height:200px;
+        font-size: 1.25rem !important;
     }
 
     .all-projects > p {
-        font-size: 1.5rem !important;
+        font-size: 1.25rem !important;
     }
 
     .socials {
@@ -433,8 +427,12 @@ h4 {
         font-size:2rem !important;
     }
 
+    #resm > h3 {
+        font-size: 2rem !important;
+    }
+
     #resm > h5 {
-        font-size: 1.5rem !important;
+        font-size: 1.25rem !important;
     }
 
     #resm-btn {
@@ -443,55 +441,79 @@ h4 {
     }
 
     .view-btn {
-        font-size: 1.5rem !important;
+        font-size: 1.25rem !important;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 800px) {
+@media screen and (min-width: 766px) and (max-width: 899px) {
     
     #hero-header {
-        font-size: 3rem !important;
+        font-size: 4rem !important;
     }
 
     #hero-text {
-        font-size: 1.5rem !important;
+        font-size: 1.75rem !important;
     }
 
     #about {
         padding: 10% 4%;
     }
 
-    #abt-card {
-        display: block;
-    }
-
     #abt-pic {
-        width: 100%;
         text-align: center;
     }
 
+    #abt-text > h3 {
+        font-size:2.25rem !important;
+        text-align: left;
+    }
+
     #abt-text {
+        width: 50%;
         padding: 5%;
+        font-size: 1rem !important;
     }
 
     .socials {
-        justify-content: center;
+        justify-content: left;
     }
 
     .fa {
-        font-size:2rem !important;
+        font-size:1.5rem !important;
     }
 
     .section-title {
+        font-size: 3rem !important;
+    }
+
+    .proj {
+        width:40%;
+        display: inline-block;
+        margin: 2% 4%;
+    }
+
+    .all-projects {
+        padding: 2% 0;
+    }
+
+    .proj-cat > h4 {
         font-size: 2.5rem !important;
     }
 
-    .proj-text-main > .proj-title {
-        font-size: 1.75rem !important;
+    .proj-cat > h5 {
+        font-size: 1.25rem !important;
+    }
+
+    .proj-title {
+        font-size: 1.25rem !important;
+    }
+
+    #proj-desc {
+        font-size: 1.5rem !important;
     }
 
     .proj-text-main > p {
-        font-size: 1.5rem !important;
+        font-size: 1rem !important;
     }
 
     .all-projects > p {
@@ -499,7 +521,11 @@ h4 {
     }
 
     .proj-pic {
-        height:200px;
+        height:130px;
+    }
+
+    .view-btn {
+        font-size: 1rem !important;
     }
 
     #resm > h3 {
@@ -507,57 +533,274 @@ h4 {
     }
 
     #resm-btn {
-        padding: 2% 5%;
+        padding: 1% 5%;
+        font-size: 1.25rem !important;
+        margin-top: 2%;
+    }
+
+    #resm > h5 {
+        font-size: 1.25rem !important;
+    }
+
+}
+
+@media screen and (min-width: 900px) and (max-width: 999px) {
+    #hero-section {
+        top: 35%;
+    }
+
+    #hero-header {
+        font-size: 5rem;
+    }
+
+    #hero-text {
+        font-size: 2rem !important;
+    }
+
+    #about {
+        padding: 10% 5%;
+    }
+
+    #abt-pic {
+        text-align: center;
+    }
+
+    #abt-text {
+        padding: 5%;
+        width: 50%;
+    }
+
+    #abt-text > h3 {
+        font-size:2rem !important;
+        text-align: left;
+    }
+
+    #abt-text > p {
+        font-size: 1rem !important;
+    }
+
+    .socials {
+        justify-content: left;
+    }
+
+    .fa {
+        font-size:1.25rem !important;
+    }
+
+    .section-title {
+        font-size: 4rem !important;
+    }
+
+    .all-projects {
+        padding: 0 !important;
+    }
+
+    .proj {
+        width: 30%;
+        display:inline-block;
+        margin:2% 2%;
+    }
+
+    #proj-intro > h5 {
+        font-size: 1.5rem !important;
+    }
+
+    .proj-cat > h4 {
+        font-size: 2.5rem !important;
+    }
+
+    .proj-cat > h5 {
+        font-size: 1.25rem !important;
+    }
+
+    .proj-text-main > .proj-title {
+        font-size: 1.25rem !important;
+    }
+
+    .proj-text-main > p {
+        font-size: 1rem !important;
+    }
+
+    .all-projects > p {
+        font-size: 1.25rem !important;
+    }
+
+    .proj-pic {
+        height:150px;
+    }
+
+    .view-btn {
+        font-size: 1rem !important;
+    }
+
+    #resm > h3 {
+        font-size: 1.75rem !important;
+    }
+
+    #resm-btn {
+        padding: 1% 3%;
+        margin-top: 2%;
         font-size: 1.5rem !important;
     }
 
     #resm > h5 {
-        font-size: 1.5rem !important;
+        font-size: 1.25rem !important;
     }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 1000px) and (max-width: 1499px) {
+    #hero-section {
+        top:40%;
+    }
+    
     #hero-header {
-        font-size: 5em;
-        margin-top:5vh;
+        font-size: 6rem;
     }
 
-    #hero-text {
-        font-size: 2em !important;
-    }
-
-    h5 {
-        font-size: 2em !important;
-    }
-
-    .proj {
-        width:70% !important;
-    }
-
-    h3 {
-        font-size: 2em !important;
-    }
-
-    .proj-title {
-        text-align: center;
-        font-size: 1em !important;
-    }
-
-    #about-pic {
-        width:50%;
-    }
-
-    h4 {
-        font-size: 3em !important;
-    }
-
-    h5 {
-        font-size:1.5em !important;
-    }
-
-    #resm {
+    #about {
         padding: 10% 5%;
     }
 
+    #abt-text {
+        justify-content: center;
+        padding: 5%;
+        width:50%;
+    }
+
+    #abt-text > h3 {
+        font-size:2.5rem;
+    }
+
+    #abt-text > p {
+        font-size: 1.25rem !important;
+    }
+
+    .fa {
+        font-size: 1.75rem !important;
+    }
+
+    .section-title {
+        font-size: 4rem;
+    }
+
+    #proj-desc {
+        font-size:2rem;
+    }
+
+    .proj {
+        width: 30%;
+        margin: 2%;
+        display:inline-block;
+    }
+
+    .all-projects {
+        margin: 0;
+        padding: 0;
+    }
+
+    .all-projects > p {
+        font-size: 1.25rem;
+    }
+
+    .proj-pic {
+        height:150px;
+    }
+
+    .proj-cat > h4 {
+        font-size: 2.5rem;
+    }
+
+    .proj-cat > h5 {
+        font-size: 1.5rem;
+    }
+
+    #resm > h3 {
+        font-size: 2.5rem;
+    }
+
+    #resm-btn {
+        padding: 1% 4%;
+        margin-top: 2%;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    #hero-section {
+        top:40%;
+    }
+    
+    #hero-header {
+        font-size:7rem;
+    }
+
+    #about {
+        padding: 5%;
+    }
+
+    #abt-text{
+        padding: 5%;
+        width: 50%;
+    }
+
+    #abt-text > h3 {
+        font-size: 3rem !important;
+    }
+
+    #abt-text > p {
+        font-size: 1.5rem !important;
+    }
+
+    .fa {
+        font-size: 1.75rem !important;
+    }
+
+    .section-title {
+        font-size:4rem;
+    }
+
+    #proj-desc {
+        font-size: 2rem;
+    }
+
+    .proj-cat > h4 {
+        font-size:3rem;
+    }
+
+    .proj-cat > h5 {
+        font-size: 2rem;
+    }
+
+    .proj {
+        width: 30%;
+        margin: 2%;
+        display:inline-block;
+    }
+
+    .proj-pic {
+        height:150px;
+    }
+
+    .all-projects > p {
+        font-size: 1.5rem;
+    }
+
+    .all-projects {
+        padding: 0;
+        margin: 0;
+    }
+
+    #resm > h3 {
+        font-size: 3rem;
+    }
+
+    #resm > p {
+        font-size: 2rem;
+    }
+
+    #resm-btn {
+        padding: 1% 4%;
+        margin-top: 2%;
+        font-size: 1.5rem;
+    }
 }
 
