--- a/style.css
+++ b/style.css
@@ -5,10 +5,9 @@ html, body {
 }
 
 body {
-    color: #f3f3f3 !important;
+    color: black !important;
     width: auto;
-    background: rgb(21,0,53);
-    background: linear-gradient(90deg, rgba(38,8,84,1) 0%, rgba(79,18,112,1) 55%, rgba(46,13,63,1) 86%); 
+    background-color: #fafafa;
 }
 
 /* Top Navbar */
@@ -21,7 +20,7 @@ body {
     font-size: 1.4rem;
     font-weight: bold;
     text-align: center;
-    color: #e1dede !important;
+    color: #0F3E7B !important;
     position: relative;
     text-decoration: none;
 }
@@ -40,6 +39,11 @@ body {
 
 .nav-link:hover::before {
     transform: scaleX(1);
+}
+
+.nav-link:hover {
+    color:#295ea3 !important;
+    transition: .2s !important;
 }
 
 .navbar-toggler {
@@ -108,8 +112,7 @@ button {
     overflow: hidden;
 }
 
-#abt-card {
-    background-color: #f3f3f3;
+#abt-card, #home-card {
     width:auto;
     color:black;
     display: flex;
@@ -126,20 +129,23 @@ button {
     font-size: 1em !important;
 }
 
-#abt-pic {
-    width:50%;
+#home-pic {
+    width:40%;
     height:auto;
+    border-radius: 50%;
+    border:#000 2px solid;
+}
+
+#abt-pic {
+    width:40%;
+    height:10% !important;
+    border:#000 2px solid;
 }
 
 h3 {
     font-weight:bold !important;
     font-family: 'Segoe UI','Arial', sans-serif;
-}
-
-.section-title {
-    color: white;
-    font-weight: bold;
-    text-align: center;
+    color:#4047C8;
 }
 
 h2 {
@@ -148,6 +154,8 @@ h2 {
     text-align: center !important;
     margin-left:-2em;
     margin-bottom: 0 !important;
+    color: #4D6BE6;
+    font-size:3.5rem !important;
 }
 
 
@@ -158,10 +166,6 @@ h2 {
 
 #proj-intro {
     padding:5%;
-}
-
-#proj-desc{
-    text-align: center;
 }
 
 #project-categories {
@@ -178,8 +182,8 @@ h2 {
 }
 
 h4 {
-    font-weight:bold !important;
-    color:#f3f3f3 !important;
+    color:black !important;
+    font-size:1.5rem !important;
 }
 
 .proj {
@@ -211,49 +215,6 @@ h4 {
     text-align: center;
 }
 
-.proj-title {
-    font-size: 1.2em;
-    text-align: center;
-    font-weight: bold;
-}
-
-.view-btn {
-    background-color: #672482;
-    color: white;
-    padding: 2%;
-    text-decoration: none;
-    font-weight: bold;
-    text-align: center;
-}
-
-.view-btn:hover {
-    background-color: rgb(143, 88, 154) !important;;
-    color: white;
-    transition: .3s;
-}
-
-/* Resume */
-#resm {
-    padding: 15% 10% 10% 10%;
-    display:block;
-}
-
-#resm-btn {
-    background-color: #a25fbc;
-    color:white;
-    text-decoration: none;
-    border-radius: 0% !important;
-    font-weight: bold;
-    font-family: 'Segoe UI', 'Arial', sans-serif;
-    border:none;
-    margin-top:5%;
-}
-
-#resm-btn:hover {
-    filter: brightness(85%);
-    transition: .2s ease;
-}
-
 .socials {
     display: flex;
     flex-direction: row;
@@ -263,14 +224,14 @@ h4 {
 .fa {
     text-decoration: none !important;
     color: white !important;
-    background-color: #672482 !important;
+    background-color: #363da7 !important;
     border-radius: 20%;
     padding: 2%;
     margin-right:5%;
 }
 
 .fa:hover {
-    background-color: rgb(143, 88, 154) !important;
+    background-color: #363da7b4 !important;
     border: 5px black;
     transition: .3s;
     color:white !important;
@@ -334,30 +295,6 @@ h4 {
         font-size:2rem !important;
     }
 
-    .section-title {
-        font-size: 2.5rem !important;
-    }
-
-    .proj-cat > h4 {
-        font-size: 1.75rem !important;
-    }
-
-    #resm > h3 {
-        font-size: 1.75rem !important;
-    }
-
-    #resm > p {
-        font-size: 1rem !important;
-    }
-
-    #resm-btn {
-        padding: 2% 5%;
-        font-size: 1.25rem !important;
-    }
-
-    #resm > h5 {
-        font-size: 1.25rem !important;
-    }
 }
 
 @media screen and (min-width:535px) and (max-width:765px) {
@@ -425,19 +362,6 @@ h4 {
 
     .fa {
         font-size:2rem !important;
-    }
-
-    #resm > h3 {
-        font-size: 2rem !important;
-    }
-
-    #resm > h5 {
-        font-size: 1.25rem !important;
-    }
-
-    #resm-btn {
-        padding: 2% 5%;
-        font-size: 1.5rem !important;
     }
 
     .view-btn {
@@ -527,21 +451,6 @@ h4 {
     .view-btn {
         font-size: 1rem !important;
     }
-
-    #resm > h3 {
-        font-size: 2rem !important;
-    }
-
-    #resm-btn {
-        padding: 1% 5%;
-        font-size: 1.25rem !important;
-        margin-top: 2%;
-    }
-
-    #resm > h5 {
-        font-size: 1.25rem !important;
-    }
-
 }
 
 @media screen and (min-width: 900px) and (max-width: 999px) {
@@ -632,20 +541,6 @@ h4 {
     .view-btn {
         font-size: 1rem !important;
     }
-
-    #resm > h3 {
-        font-size: 1.75rem !important;
-    }
-
-    #resm-btn {
-        padding: 1% 3%;
-        margin-top: 2%;
-        font-size: 1.5rem !important;
-    }
-
-    #resm > h5 {
-        font-size: 1.25rem !important;
-    }
 }
 
 @media screen and (min-width: 1000px) and (max-width: 1499px) {
@@ -706,22 +601,6 @@ h4 {
         height:150px;
     }
 
-    .proj-cat > h4 {
-        font-size: 2.5rem;
-    }
-
-    .proj-cat > h5 {
-        font-size: 1.5rem;
-    }
-
-    #resm > h3 {
-        font-size: 2.5rem;
-    }
-
-    #resm-btn {
-        padding: 1% 4%;
-        margin-top: 2%;
-    }
 }
 
 @media screen and (min-width: 1500px) {
@@ -754,10 +633,6 @@ h4 {
         font-size: 1.75rem !important;
     }
 
-    .section-title {
-        font-size:4rem;
-    }
-
     #proj-desc {
         font-size: 2rem;
     }
@@ -787,20 +662,6 @@ h4 {
     .all-projects {
         padding: 0;
         margin: 0;
-    }
-
-    #resm > h3 {
-        font-size: 3rem;
-    }
-
-    #resm > p {
-        font-size: 2rem;
-    }
-
-    #resm-btn {
-        padding: 1% 4%;
-        margin-top: 2%;
-        font-size: 1.5rem;
     }
 }
 
