--- a/style.css
+++ b/style.css
@@ -29,12 +29,14 @@ body {
     content: '';
     position: absolute;
     width: 100%;
-    transform: scaleX(0);
-    height: 2px;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #295ea3;
     bottom: 0;
     left: 0;
-    background-color: white;
-    transition: .3s;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
 }
 
 .nav-link:hover::before {
@@ -48,6 +50,17 @@ body {
 
 .navbar-toggler {
     border: 0cm !important;
+}
+
+.text-show {
+    opacity: 1;
+    transform: translateY(-5%);
+    transition: .5s ease-in;
+}
+
+.text-fade {
+    opacity: 0;
+    transition: .2s ease-out;
 }
 
 /* Hero Section */
@@ -65,25 +78,10 @@ Data analytics: Lucida Console
     width:80%;
 }
 
-#hero-header {
-    font-weight: bold;
-    text-align: center;
-}
-
-.text-show {
-    opacity: 1;
-    transform: translateY(-5%);
-    transition: .5s ease-in;
-}
-
-.text-fade {
-    opacity: 0;
-    transition: .2s ease-out;
-}
-
 #hero-text {
-    font-size: 2.5em;
-    text-align: center;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #hero-home {
@@ -92,27 +90,81 @@ Data analytics: Lucida Console
     animation: fadein 1s;
 }
 
+#hero-card {
+    color:black;
+    display: flex;
+    overflow:hidden;
+    justify-content: center;
+}
+
+#hero-desc {
+    text-align: center;
+    font-size:1.35rem;
+}
+
+#hero-pic {
+    width:40%;
+    height:auto;
+    border-radius: 50%;
+    border:#000 2px solid;
+    margin-left:5%;
+}
+
+.socials {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.fa {
+    text-decoration: none !important;
+    color: white !important;
+    background-color: #363da7 !important;
+    border-radius: 20%;
+    padding: 1.5%;
+    margin-right:5%;
+}
+
+.fa:hover {
+    background-color: #363da7b4 !important;
+    border: 5px black;
+    transition: .3s;
+    color:white !important;
+}
+
 @keyframes fadein {
     from {opacity: 0;}
     to {opacity: 1;}
 }
 
-button {
-    border-color: white !important;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
-    border-radius: 50px !important;
-    text-align: center;
-    font-size: 20px !important;
+a {
+    text-decoration: none !important;
+    color:#464646 !important;
     font-weight: bold;
+}
+
+a:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
+a:hover {
+    color:#8a9bdc !important;
+    transition: .2s;
+}
+
+p {
+    font-size:1.25rem;
 }
 
 /* About */
 
 #about {
     overflow: hidden;
+    padding:4%;
 }
 
-#abt-card, #home-card {
+#abt-card {
     width:auto;
     color:black;
     display: flex;
@@ -125,20 +177,8 @@ button {
     justify-content: center;
 }
 
-#abt-text > p {
-    font-size: 1em !important;
-}
-
-#home-pic {
-    width:40%;
-    height:auto;
-    border-radius: 50%;
-    border:#000 2px solid;
-}
-
 #abt-pic {
     width:40%;
-    height:10% !important;
     border:#000 2px solid;
 }
 
@@ -146,22 +186,30 @@ h3 {
     font-weight:bold !important;
     font-family: 'Segoe UI','Arial', sans-serif;
     color:#4047C8;
+    font-size:2.5rem !important;
 }
 
 h2 {
     font-weight: bold !important;
-    text-align: left !important;
     text-align: center !important;
-    margin-left:-2em;
     margin-bottom: 0 !important;
     color: #4D6BE6;
     font-size:3.5rem !important;
 }
 
+/* Experience */
+
+#experience {
+    padding:4%;
+}
+
+#exp-card {
+    padding:5%;
+}
 
 /* Projects */
-#projects {
-   margin-top: 5%;
+#portfolio {
+   padding:4%;
 }
 
 #proj-intro {
@@ -213,32 +261,6 @@ h4 {
     display: flex;
     flex-direction: column;
     text-align: center;
-}
-
-.socials {
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-}
-
-.fa {
-    text-decoration: none !important;
-    color: white !important;
-    background-color: #363da7 !important;
-    border-radius: 20%;
-    padding: 2%;
-    margin-right:5%;
-}
-
-.fa:hover {
-    background-color: #363da7b4 !important;
-    border: 5px black;
-    transition: .3s;
-    color:white !important;
-}
-
-#resm > h5 {
-    text-align: left;
 }
 
 /* Screen Responsiveness 
