--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body {
     margin-bottom: 0 !important;
 }
 
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='black' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+  }
+
 .nav-link {
     font-size: 1.4rem;
     font-weight: bold;
@@ -148,7 +152,7 @@ a:hover::before {
   transform: scaleX(1);
 }
 
-.hero-section > a:hover {
+a:hover {
     color:#8a9bdc !important;
     transition: .2s;
 }
@@ -323,6 +327,15 @@ h5 {
 
     #abt-text > p {
         font-size: 1.25rem !important;
+    }
+
+    #hero-card{
+        display:block;
+        text-align: center;
+    }
+
+    #hero-section {
+        text-align: center;
     }
 
     .socials {
